# IdeaFlowAI

./: .env.example  .gitignore  README.txt
.kiro/specs/ai-saas-platform/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: ai-saas-platform-rules.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  custom_agents.py  discovery.py  mock.py  mock_outputs_new.py  mock_pipeline.py  modes.py  orchestrator.py  pipeline.py  ppt.py  ppt_pipeline.py  preview.py  prototype.py  registry.py  requirements.py  skills.py  ui_design.py  user_stories.py
backend/app/api/: agents.py  auth.py  chats.py  websocket.py  workflows.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/models/: __init__.py  chat.py  database.py  schemas.py  user.py  workflow.py
backend/app/services/: pptx_export.py
backend/tests/integration/: __init__.py  test_pipeline_workflows.py
backend/tests/unit/: test_base_agent.py
docs/: PRODUCTION_DEPLOYMENT_GUIDE.md
env-templates/: .env.development  .env.frontend  .env.production
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/hooks/: useSpeechRecognition.ts  useTextToSpeech.ts  useTheme.ts  useWebSocket.ts  useWorkflow.ts
frontend/src/lib/: api.ts  env.ts
frontend/src/styles/: globals.css  theme.ts
frontend/src/types/: index.ts
(+43 files in other folders)
